--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>AirBnB clone</title>
   </head>
-  <body>
+  <body style="margin:0;">
     <header style="background-color:#FF0000; height:70px; width:100%">
     </header>
-    <footer style="background-color:#00FF00; height:60px; width:100%">
-      <p style="text-align: center;">Holberton School</p>
+    <footer style="display:flex; background-color:#00FF00; height:60px; width:100%; bottom:0; position:absolute;">
+      <p style="margin:auto">Holberton School</p>
     </footer>
   </body>
 </html>
