--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <section class="filters">
             <div class="locations">
-                <h3>State</h3>
+                <h3>States</h3>
                 <h4>California, Arizona...</h4>
             </div>
             <div class="amenities">
